# MaMoE

./: .gitignore  README.md  environment.yaml  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  eval_callback.yaml  image_logger.yaml  model_checkpoint.yaml  test_callback.yaml
configs/data/: cityscapes.yaml  default.yaml
configs/debug/: data_parallel.yaml  default.yaml  limit.yaml  limit_parallel.yaml
configs/experiment/: base_experiment.yaml  base_experiment_dt.yaml  experiment_demo.yaml
configs/hydra/: default.yaml
configs/model/: default.yaml
dmt/: train.py
dmt/data/: __init__.py  dataset.py  lightning_data.py  utils.py
dmt/lightning_modules/: __init__.py  lightning.py
dmt/models/: __init__.py
dmt/models/diffusion/: __init__.py  unet.py
dmt/models/feature_extractor/: __init__.py  perceptual_feature_extractor.py
dmt/models/mamoe/: utils.py
dmt/models/mamoe/cross_attention/: load_cross_attention_data.py  masked_attention.py
dmt/models/mamoe/moe/: load_moe_data.py  moe.py
dmt/utils/: __init__.py  callbacks.py  extra_utils.py  task_utils.py
dmt/utils/eval/: __init__.py  eval.py  sample.py
mamoe/: train.py
mamoe/data/: __init__.py  dataset.py  lightning_data.py
mamoe/lightning_modules/: __init__.py  lightning.py
mamoe/models/: __init__.py
mamoe/models/diffusion/: __init__.py  unet.py  vae.py
mamoe/models/mamoe/: utils.py
mamoe/utils/: __init__.py  callbacks.py  extra_utils.py  instantiators.py  logging_utils.py  model_utils.py  task_utils.py
mamoe/utils/eval/: __init__.py  eval.py  sample.py
(+26 files in other folders)
