[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DM-Training"
version = "1.0"
description = "Code to train diffusion models using huggingface diffusers."
authors = [
    { name = "Tim Küchler", email = "tim.kuechler@iwr.uni-heidelberg.de" }
]
readme = ""
license = { text = "" }
requires-python = ">=3.11"
urls = { Homepage = "https://github.com/tim-kuechler/MaMoE" }

[tool.setuptools.packages.find]
where = ["."]